--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -19,21 +19,18 @@
             <li>iii. Additional Comments (2 questions)</li>
         </ul>
         <p>Answering the survey should take around 30 minutes of your time. All the data collected from the survey is anonymous. The results of the survey may be reported in academic publications. If you have any questions or concerns, please contact me (christianorossini@ic.ufal.br).</p>
-    </div>   
-
-
-    
+    </div>       
     
     <div id="members">
         <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
         <p><strong>Advisor:</strong> Baldoino Fonseca</p>
     </div>
     
-    <p>Welcome! Click below to enter!</p>
-
+    <p>Welcome! Click below to enter!</p>    
     
-    
-    <p style="text-align: center;">        
+    <p class="text-center">        
         <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" role="button">Go to survey</a>    
     </p>
+
+    <p>** Preferable browsers: Mozila Firefox and Google Chrome</p>
 {% endblock %}
