--- a/questionnaire/templates/masterquest/participant.html
+++ b/questionnaire/templates/masterquest/participant.html
@@ -12,7 +12,10 @@
                 {% csrf_token %}
                 {{form}}                                
             </div>    
-            <input type="submit" value="Ok. Now, show me instructions." class="btn btn-primary" />
+            
+            <p class="text-center">
+                <input type="submit" value="Ok. Now, show me instructions." class="btn btn-primary" />
+            </p>
 
         </form>
     </fieldset>
