--- a/questionnaire/templates/masterquest/surveyFinish.html
+++ b/questionnaire/templates/masterquest/surveyFinish.html
@@ -2,15 +2,17 @@
 
 {% block content %}
 
-<h1>4 - Finish</h1>
+<div class="container">
 
-<p>
-    Thanks for your help.
-</p>
+    <h1>4 - Survey finished successfully</h1>
 
-<p style="text-align: center;">        
-        <a href="/masterquest" title="Enter" class="btn btn-primary btn-lg" role="button">Go to home</a>    
+    <p class="text-center">
+        Thank you for your support.
     </p>
 
+    <p class="text-center">
+        <a href="/masterquest" title="Enter" class="btn btn-primary btn-lg" role="button">Go to home</a>
+    </p>
 
+</div>
 {% endblock content %}
