criação de uma versão estável

--- a/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
+++ b/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
@@ -2,11 +2,11 @@
 
 <div class="tab-pane" id="codeSnippetContent" role="tabpanel" aria-labelledby="codeSnippetContent-tab">
     
-    <h3>Java code snippet</h3>
+    <h3>Java code</h3>
     
     <pre>
         <code>    
-            {{dtModel.codeSnippet1}}
+            {{dtModel.codeSnippet}}
         </code>
     </pre>
 </div>
