Melhorias de visualização

--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -23,7 +23,7 @@
         {% endblock tabTreeContent %}                
         <li class="nav-item">
             <a class="nav-link" id="formContent-tab" data-toggle="tab" href="#formContent" role="tab"
-                aria-controls="formContent" aria-selected="false">Task submission</a>
+                aria-controls="formContent" aria-selected="false" style="font-weight: bold">Task submission</a>
         </li>
     </ul>
 
