--- a/questionnaire/templates/masterquest/survey_task_cc.html
+++ b/questionnaire/templates/masterquest/survey_task_cc.html
@@ -18,7 +18,7 @@
            
             <h3><span class="text-white bg-dark rounded">Task 2/2</span> - code and decision tree analysis</h3>
 
-            <h4>Instructions</h4>
+            <h4 class="instructions">Instructions</h4>
 
             <p>
                 This task presents the same code snippet from previous task along with a decision tree. This machine
