--- a/questionnaire/templates/masterquest/survey_task_id.html
+++ b/questionnaire/templates/masterquest/survey_task_id.html
@@ -11,7 +11,7 @@
 
             <h3><span class="text-white bg-dark rounded">Task 1 of 2</span> - code snippet analysis</h3>
 
-            <h4>Instructions</h4>
+            <h4 class="instructions">Instructions</h4>
 
             <p>
                 This task presents a code snippet which contains a specific code smell type.
