--- a/questionnaire/templates/masterquest/participant.html
+++ b/questionnaire/templates/masterquest/participant.html
@@ -5,14 +5,19 @@
 <div class="container" id="newParticipant">
 
     <h1 class="stepTitle">1 - Participant Background</h1>
-    
+
     <fieldset>
         <form action="{% url 'newparticipant' %}" method="POST">
+
+            {% csrf_token %}
+
+            {% for field in form.visible_fields %}
             <div class="form-group">
-                {% csrf_token %}
-                {{form}}                                
-            </div>    
-            
+                {{field.label_tag }}
+                {{field}}
+            </div>
+            {% endfor %}
+
             <p class="text-center">
                 <input type="submit" value="Ok. Now, show me instructions." class="btn btn-primary" />
             </p>
