--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1>3 - Survey content - stage {{classificationTreePosition}} of {{classificationTreeTotal}}</h1>
+    <h1>3 - Survey content - <strong>stage {{classificationTreePosition}} of {{classificationTreeTotal}}</strong></h1>
 
     <!--
     <h2 class="tasktitle">Task: {{task.name}}</h2>
