Criação do SurveyManager e do Latim Square: fluxo adaptado ao quadrado latino e melhorias no código

--- a/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
+++ b/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
@@ -6,7 +6,7 @@
     
     <pre>
         <code>    
-            {{dtModel.codeSnippet}}
+            {{task.codeSnippetContent}}
         </code>
     </pre>
 </div>
