--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -4,12 +4,8 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1>3 - Survey content - <strong>stage {{classificationTreePosition}} of {{classificationTreeTotal}}</strong></h1>
-
-    <!--
-    <h2 class="tasktitle">Task: {{task.name}}</h2>
-    -->
-
+    <h1>3 - Survey content - <strong>{{surveyProgress}}</strong></h1>
+    
     <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="intro-tab" data-toggle="tab" href="#introContent" role="tab" aria-controls="introContent" aria-selected="true">Instructions</a>
