--- a/questionnaire/templates/masterquest/inc_survey_treePanel.html
+++ b/questionnaire/templates/masterquest/inc_survey_treePanel.html
@@ -5,6 +5,6 @@
     <h3>Decision tree</h3>
     
     <div class="container-fluid" id="gridModelSnippets">
-        <img src="{% get_static_prefix %}masterquest/images/dt/{{dtModel.dtImg}}" />
+        <img src="{% get_static_prefix %}masterquest/images/dt/{{task.decisionTree}}" />
     </div>
 </div>
