--- a/questionnaire/templates/masterquest/base.html
+++ b/questionnaire/templates/masterquest/base.html
@@ -14,6 +14,8 @@
     <script>hljs.initHighlightingOnLoad();hljs.initLineNumbersOnLoad();</script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'masterquest/style.css' %}">
+    {% block scripts %}  
+    {% endblock scripts %}
             
     <title>MasterQuest</title>
 </head>
