--- a/questionnaire/templates/masterquest/survey_task_dt.html
+++ b/questionnaire/templates/masterquest/survey_task_dt.html
@@ -14,30 +14,16 @@
 
     <div class="tab-content" id="myTabContent">
 
-        <div class="tab-pane show active" id="introContent" role="tabpanel" aria-labelledby="introContent-tab">
-           
+        {% comment %}
+        <div class="tab-pane" id="introContent" role="tabpanel" aria-labelledby="introContent-tab">
+
             <h3><span class="text-white bg-dark rounded">Task 2/2</span> - code and decision tree analysis</h3>
 
             <h4 class="instructions">Instructions</h4>
 
-            <p>
-                This task presents the same code snippet from previous task along with a decision tree. This machine
-                learning technique contains rules, nodes and leafs that aims to detect the same code smell type as in the
-                code, i.e., both tree and code points to same code smell type.
-            </p>
-            <p>
-                It's an effort to measure to what extent the rules from decision tree helps the developer to
-                make correlation with code.
-            </p>
-            <p>
-                Thus, in this task you have to:
-            </p>
-            <ol>
-                <li>Check the code snippet - click on "Code view".</li>
-                <li>Check the decision tree - click on "Tree view". You might come back to the code if you want to.</li>
-                <li>Fill in the form and submit it - click on Task submision.</li>
-            </ol>
+
         </div>
+        {% endcomment %}
 
         <div class="tab-pane" id="formContent" role="tabpanel" aria-labelledby="formContent-tab">
             {% if form.errors %}
@@ -80,3 +66,24 @@
 </div>
 
 {% endblock surveyContent %}
+
+{# ### MODAL #}
+
+{% block modalTitle %}
+code and <strong>decision tree</strong> analysis
+{% endblock modalTitle %}
+
+{% block modalContent %}
+<p>
+        This task presents a code snippet that contains a specific code smell type, along with a decision tree whose rules
+        (nodes, paths and leaves) suggest the same design problem as the code.
+</p>
+<p>
+    So, in this task you have to:
+</p>
+<ol>
+    <li>Check the code snippet - click on the tab "Code view".</li>
+    <li>Check the decision tree - click on the tab "Tree view". You might return to the code if you want to.</li>
+    <li>Fill in the form and submit it - click on the tab "Task submission".</li>
+</ol>
+{% endblock modalContent %}
