--- a/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
+++ b/questionnaire/templates/masterquest/inc_survey_codeSnippet.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="tab-pane" id="codeSnippetContent" role="tabpanel" aria-labelledby="codeSnippetContent-tab">
+<div class="tab-pane show active" id="codeSnippetContent" role="tabpanel" aria-labelledby="codeSnippetContent-tab">
     
     <h3>Java code</h3>
     
