--- a/questionnaire/templates/masterquest/survey_task_noDt.html
+++ b/questionnaire/templates/masterquest/survey_task_noDt.html
@@ -7,7 +7,8 @@
 
     <div class="tab-content" id="myTabContent">
 
-        <div class="tab-pane show active" id="introContent" role="tabpanel" aria-labelledby="introContent-tab">
+        {% comment %}
+        <div class="tab-pane" id="introContent" role="tabpanel" aria-labelledby="introContent-tab">
 
             <h3><span class="text-white bg-dark rounded">Task 1 of 2</span> - code snippet analysis</h3>
 
@@ -24,6 +25,7 @@
                 <li>Fill in the form and submit it - click on "Task submission".</li>
             </ol>
         </div>
+        {% endcomment %}
 
         <div class="tab-pane" id="formContent" role="tabpanel" aria-labelledby="formContent-tab">
             {% if form.errors %}
@@ -64,5 +66,22 @@
 
     </div>
 </div>
-
 {% endblock surveyContent %}
+
+
+{% block modalTitle %}
+    code analysis
+{% endblock modalTitle %}
+
+{% block modalContent %}
+<p>
+    This task presents a code snippet which contains a specific code smell type.
+</p>
+<p>
+    So you have to:
+</p>
+<ol>
+    <li>Check the code snippet and try detect it - tab "Code view".</li>
+    <li>Fill in the form and submit it - tab "Task submission".</li>
+</ol>
+{% endblock modalContent %}
