--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -6,8 +6,7 @@
 
 
 
-    <h2 id="research-title">Research - Code Smell Detection: assessing interpretability of decision tree-based
-        detections.</h2>
+    <h2 id="research-title">Research - Code smell detection aided by a decision tree classifier.</h2>
 
     <div>
         <p>Code anomaly, so-called "code smell", is an implementation choice that indicates a deign problem which
@@ -41,5 +40,5 @@
         <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" role="button">Go to survey</a>
     </p>
 
-    <p>** Preferable browsers: Mozila Firefox and Google Chrome</p>
+    <p>** Preferable browsers: IE, Mozila Firefox and Google Chrome</p>
     {% endblock %}
